class Certificate {
  constructor(fileName, title, id) {
    this.id = id
    this.fileName = fileName
    this.title = title
  }
}

module.exports = Certificate
