const mongoose = require('mongoose')
const autopopulate = require('mongoose-autopopulate')

const VideoSchema = new mongoose.Schema({
  fileName: String,
  title: String,
  description: String,
  taggedUsers: [
    {
      type: mongoose.Schema.Types.ObjectId,
      ref: 'User',
      autopopulate: true,
    },
  ],
  likedBy: [
    {
      type: mongoose.Schema.Types.ObjectId,
      ref: 'User',
      autopopulate: true,
    },
  ],
})

VideoSchema.plugin(autopopulate)
module.exports = mongoose.model('Video', VideoSchema)
